@@ -1,28 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST plzip-1.1.tar.gz 71881 SHA256 77d935fc83ffe6a3e689edd67441291a94dbfc468653eba33524909ef5c71f63 SHA512 8a4c9de51edc085c6142cd507c3f29b35c7604d7663a299dfc2d5d22d8ef5020295823eaa6c19ed11c861b6fa79e7f687f048419f4c5206ccd2b6d9390bd3438 WHIRLPOOL 6a94a873f376cd9433b695127f922931e50fc238022950bdedf93d67bb946839ac36de60766eb658768dd39fb262be6a743d545cc5777f679b67cb2f38456a8b
 DIST plzip-1.3.tar.gz 60027 SHA256 45f631ae849cb1372317432478c815725ba00ae67fd7df9fb97df994720234a7 SHA512 7f32978b1c68d546df8c2a60f0dec3594981f08710216ec79d6cbe6fbc4163c5ab54781165689fd30b512159fc02a00a62d588b13166b53ccf94a544f1586173 WHIRLPOOL e943978d600f4eac00c390cdf2168b1cc97a0e888c4be3f1f76814edbbca81c5d1ff2792249d923dd4c4d2f20f7f79dff3b436e78a6f10827583a572b94e428a
-EBUILD plzip-1.1.ebuild 694 SHA256 86526f1cf256aedfd1bb37db3b98b74de3b66530b02fc7e4f4cdea23b6dcd26c SHA512 1510eda9f687769cb2456ceab71a6a4dc13eb3eb7602dd589f245e3038851493fc96f9a4c327fdf97fb077c66401617a7298424782e1441a4992f42f2904042b WHIRLPOOL 4ff02f605f05074f54a82af4133a7fd02b7d8cd2bca4e03cae1c1bce15e922801f600fb3e544b545c61be5549c5e13ed76b12806f581efeb1d7e4b296ea0e24b
-EBUILD plzip-1.3.ebuild 700 SHA256 b5dfeb38ccc8fd25aebaea3954fffba64d65d5514a281394d5b4efd257d70e06 SHA512 ee593e0dcff20ba2298c66badbebf07ca4281894bc72e38250fd9c337cb6a42586b441ffbf7f5684b58472fc1746dbf48e8dbb7f02c0b94211724ce313e94c5d WHIRLPOOL ed7a01bf2e4ff8cae9c7b1749b45986bbbee635d89fa3802fa7147ed32ad37d10262ea0e6a58ae02b611d6972443c2e2e713b107fb1211e34826a9ec41897cf4
-MISC ChangeLog 476 SHA256 14dd4d6050acff00b56f16d519406039ad04912d38adaf1d0ac6e3cb5d44ea7e SHA512 ea934f787d150f4a85fd504bdfc182a4533c5e7ce510cda34e3aa2df3efcc9b09855624fa8a674fb6712a84483321f3241c27fa2f2a9f2bc3a14ac6a9e4ec452 WHIRLPOOL dc181a224963d0c1c5864b39bec1750880a2fdcba56fff4be37afe8d063b4930fe9df76b62d730ef09610c74d158c7ae79ccc3d0469fef9414c7d8d51942e010
+EBUILD plzip-1.3.ebuild 721 SHA256 6a817532d8c2978eee94626b76331479dd3ff6d4560ea93a45483fd4bbb0ccd5 SHA512 d803f61ba08dbb4d326e2e4dfb6ac80864bdc4d686d36acaf7efa7226873cb08a64a8b284a8cc50094420f46ab71d870ed5012721af55b290ab47f9abf86dc9f WHIRLPOOL 5b8bf8809a99919a57c02bb02aa3f98dba6c456fb2276774088b859993020dd177a98c19e8f7be65d31fc4a95100c283c419e553811c06b076a40f74ce152303
+MISC ChangeLog 610 SHA256 1ea850fe5ad361ff4bdb982eb20af6d4698c1ac42976025436dc02a399ff2348 SHA512 ba0e26d3ddb8a8a5142a0ce4fed878326b0e21bf49a9a835050c4c13067207e86f6ca4da62b2b4e51efe6c9321f0ba25fe223066df9c45ae1e61a9969eb9f032 WHIRLPOOL 833fd70f686814b5cd11be835e11b03a23c148b0e7eaff13ecf438d6a81babc907ceb4166401a486238759dd10c8ca1c534c71fb45aab6217be64ba1ebfe8e51
 MISC metadata.xml 233 SHA256 fd88d74157f79eb4a06067443b7138cfb56fe1c66bfa5dfe72bda038ea5a9dda SHA512 6676f74cc1b612ba4f95101b64570f257e4b37cfd803a987e3afd9e12ef9b1480918c5d6e4fa955b8447eba9e319c94aac11abe247187870406986b476b154e8 WHIRLPOOL 3c1f192d1fb5e213e407a70a7be417170b651f3049b32ddf1f6b1c1983dedbcb498fa92eb96a41463c0ff0754044930150f0e5940708a6584923e12b86200349
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUx67SXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJU/0IDXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOeDgP/imBhUIhmUU4swP4U3AyAMNj
-c/doyBMmDP3vX/aNeYnqWouJ0SwjIbMrfKImPAo72nna5YhoykKXQgt/fW8Q4hCC
-qO3p8S721oB+lJu4JTyzHfvXvvAjvRQlv/urtnXK9HXj9PxY5GjhhVQXCEoqxgLH
-BoFw4KJzJbk5iryJ/tPzDCLmzaSAkJpcCbZ6hEV+IEjBfF7UXbV+wEeoXJ+oAsMF
-uKQUgx0agtytmBGuFmYLuz4wyCvSC8Cp7fTniYp0E1AVcEZpXIDWRsBZeNHyReT4
-Ew5c5bIx99J+B0KxesPH6hRzZuglwiUbs9jaW2TB6jDcQmDj92o5xZ4HmLCb/fP9
-4u179o4eeuq1RQpSIKlaxVNgMoRbWPymEYqWAKOvslDGUjgpFMZ69vCUFOQr9sEh
-xCO98eeurdd4APUx8fAUpCLEO6yVpau8Mouj+e7xLZCe4yZRx5z6Tz+2WcgBARkR
-kYC/ONj2yFVnOQMtx1V/oiOcsKuQ1Ytkn72OKkhY5t0/2b0o6uXeA8z6VCSw3ezS
-LP64rJOpdsMjJZbv4bLAe6PEtLeBVD12WPqStNYr91Z5RMrd5zjDnVd9VoFwYlXd
-werky9wbsJ2xmR7+myEHSWzrQQKpQoHnU5BOgFX6uoC1kxq4ZSGc+zkwjqSjGSAM
-INmtIZ+HzWPDuguwdSKs
-=T8Ah
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOm+EP/ijXq/BmMxobEJrzQTsbwTdd
+U7COj+uphB77unnWv/izLkc4xrWHNQ0LWdbiB+5YvJChpilGFoinsFStoDivOopt
+mpo2je052vb5v4s4JsogNgrA1wCS7zT6QoEV1nu3we4nQ/D57HkbNux2PZYWn9Q1
+va4XJ7DOw3tXrk/hlt+xY5A8sznXdFMicWB5/UkzQGNL45x682k8srYY+PUg/wnS
+oQUgesV6wWI3LuSrA3AaY6GU+5SJymDRk+Oj+DPkdj6lkZHiGTWpEJqOInJhSCjR
+luFJdW0dNSoBuJOahOOWDMBC2SZp2RufSOVGBmfKFylfqLDi3n3EMvg/uCf+vFxG
+csjStPPPnIhJwx8dXzmsdM6U522cMHsV3XSVWvqWzH0s4TDZmJwpU9P/gxYFia1Y
+qs/jQH+T85Afr7WB7V+qdXpCkvAx9BxwrUiuwKxR8hNb1NG266nDIuAQfoonC8NO
+xjP/0Ktu3tP3Rgr3NpIUTtd0ficzw8v7/rNpdbxMhAqwnLC6BvD2JUwAANozm7YH
+ZOWlkD/5bg7+/XxyuxZJ7WQcFqpg0xukC7n0PWgOAuksCiBPar0aarK95IrZjNn1
+/Tr64pQvifEYT6R093xPqVYxnyPSDs5nAyK7enny+wj8ewTn1oiq+EEPXM/Iyebl
+7Sg6eIh+Fx3SMv6Ty8/d
+=hni7
 -----END PGP SIGNATURE-----
