@@ -11,23 +11,13 @@ EBUILD squashfs-tools-3.4.ebuild 1101 SHA256 152e87091c76d2312057319cf1f0250154d
 EBUILD squashfs-tools-4.2-r1.ebuild 1469 SHA256 07a7963e89e3785c164f276e42fe5e01e94c7dc255ae34427a9bd7bc7124d452 SHA512 cbd8c215301e0d063f5dcf3049242fd7f2f2c79df17efca71e377dec57605ed21381edcd944474ff21c9da13bcf748242a141947151ffc4b15fb3c142b14671b WHIRLPOOL 297658a6eec918b03040f9a785c9f3f6d1d09484d1328510591c73cb38005469da8ed53b93749be466cf3a70e14a8e29a71576ac03f17c909b23eacc4c9f50c0
 EBUILD squashfs-tools-4.2.ebuild 1396 SHA256 7fed23bab94b6b41c70a7ccb5ab57d22eb8fad9ebe191bade48a292eee2b5d5e SHA512 d2a857c4c7cc04268a906f77afbd82d5f13f4faf42a3a574352a9ee403e8716277499d0fb29bf2caeaa782f5352ad4acbb8bd29ddcb10747f705f61c1a83ba78 WHIRLPOOL c37f0cf29938e081bf01e3badc6a5e41f29af77e6ef33c955af14c54f9c53e187a4ddad22f46782ae86da7feaa166999109546d42cf59ab010ee5a846af31634
 EBUILD squashfs-tools-4.2_p20140119.ebuild 1414 SHA256 11dea05ccfbf5d162fda27fd66e327426f40ee507526f7c1f75d39aa209ce037 SHA512 ab280eb0f2f5bfd384b55570193e46f6be9d4426280074846c7118486a43e8cd18c45dfccf0924b5d9fbd1404712a866421c87bc787b2fc777d8957bc365e8b7 WHIRLPOOL 0a921f928648a86a6b180d716b642e5af47d424fc90f10ad5104c446903c5b8e64871aaf5f2b35c4ee5e9b3cce729b2b5e002184a773e386586692b5d84372f3
-EBUILD squashfs-tools-4.3.ebuild 1296 SHA256 6b9deecf08abff0c5197c4645c157cc73a0f3dc82778226a798a1681ee801137 SHA512 41a0bef7e1affb7df11a0fb52329a7e5022c6dc01646907ea5a8b0c1edbd119845f749d77aba8b8f2885d6983211c254702dd7dfef43c37f6cd544fc07b5d50d WHIRLPOOL 4bccf51e8705c6399c32aed7d1cdba9b41514ef9c7add89aa3aae9ff14303942546f235f82d95c9282291039d9979e820bb4b34e1ae1dacc257d4e79fa75cd5c
-MISC ChangeLog 17662 SHA256 19a7ae5dbb8629f0ebc60e6bcbcc8280542f955778451b41e0d394b4ed2813df SHA512 7f320deb2a6ba3ae7af995caafd96dfb672fef43abc967a394cab193a900ebd05f92387e1f31abcba66ba1b7cf17ab88a84e0350a97ab7f5d0d65ae8e9d8dac7 WHIRLPOOL 58119028c6819054aabda79175dd89cd0e42d20cd3d98d3546204cf8eef4e480fcd53bd85501d627b35a4f03ffa2e044837764438319a41f2e681dc54c4bb8e2
+EBUILD squashfs-tools-4.3.ebuild 1295 SHA256 ea32e6529c5d1c05a89034f99dfd39e5e4517f06c4c9333c361db670f79c9323 SHA512 4d58b32dfebc973186b4b459df04ac85dda534eb7a88e61ff1f0027680593b49b6e99c2cb11c5d16007bf3c8c047abfd74f2fdbbae235afb6f469805d63dc6d5 WHIRLPOOL afd1ed99e67bfa2cc12678e632b768b8826075cea1cfe6ad0d38fc03f42dfe7a1709a82b2a08b75ec551984c109c58b3411905a176421a31a0244f2624cf3244
+MISC ChangeLog 17770 SHA256 bee264a6c320493000eb896edc2893517f9b6f14c9a2ae351e898bcfa3ad1940 SHA512 13bd9e67de9673762714bde0eda99748fb3099214f87cbf4f044f22ff8a203ad4ce6f624edb75d36c06942927d0d77ef03f9f8ad3e90e45d2f1ece0e5e339de8 WHIRLPOOL c68d307bb60915d5f8b963f6f99773767b96e22a94c0c1728166b53b91dd7e2931744c804c34fb5818a6d750e3469bb9fe74b87a90cff007fa40dba8f61db135
 MISC metadata.xml 377 SHA256 f55b4ff997009e1a694f9f78512dcce70e0fd1a111e25e758e6dc57dd19498cc SHA512 0fdc2d9306ee383b9e5220eab84478b19c7c7045909cedc9bfe823ea64e15f31f420062344ed6339dbd73a799b394097ac659d1e8dd6fb5da32f2c8bb0cdb72c WHIRLPOOL 5c57733fba7143afd7fe7351e2d8ae8a41f6ff1d4cdc8bc7152e270835713622303b9671ea2974c90c17e2f797e1b00ce68d80bfb5f396284cf3e8efb2a5cede
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU/YfXAAoJELp701BxlEWfUpwQAMZ0KENhior8va6TUb9wR4Ch
-dBuRKpnYVAgSFTCrBG4wb9xXrtHuYcAegI1K7+73hlDAqH+HhP0eJEFUGq5ASLe7
-hHVg6Vd680vkE5vhiLFNzuFsZIZNe6ggTvZWY1PwdSL+aCwbMgG2dnxWoE5SpkWg
-wIB1EQHllawb7EJOP74r8l+Pjq3L5GykwgbtMuyz8AF+MEMRiWll7JX9CHfYl96m
-SJOo6VF7aEk+LoF6jqzCIz3B9L0B+czya3BgS+QVF7qwMDdaA5NXltdncpaeNLHy
-6F07yai7+o17okdVDU5fekm9KHpFqgxTemmhAYdjJWnfCngMU5nbey7Wwv0nVjnz
-ggYAWE+wVJ+Ukd7GeuP9ARCO09cYoN++yInrbdibI1IOWDAD/Mdww4UhJJ4SL483
-mWNkIFtZ8m1OY+1C6tnAvNQWJ1z+uhDCnuudOmRTfjaQ1bo8st5nJV93x1zZAx5k
-uezLC7+u+LJM7ScYtVUmaf31wYi3MBuaZ4g/R04sOnqBCF2IFPGKYFjgU/Ly8CTu
-HWoDJuOmZY14vDCJhgMRlxtkqiVQ7l5XbjoH5MYaLW7KhNnaqGM42wZxzrNlt/wi
-6P7UWrZVB7RGMC38MuisFqylHugxSoQh2ivepnjx/rBMlzGs56d6LollAKBHI5ce
-+9vQKmLzhaFnS2eBKSTO
-=Kagi
+iEYEAREIAAYFAlT/QZIACgkQVWmRsqeSphP58wCfTNKFmA/7Lh9xztf6ux52DIlS
+9aEAn2XEvNHYdY20Eh8ZwP7Yt/rsgtuT
+=1dLP
 -----END PGP SIGNATURE-----
