@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/plzip
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/plzip/ChangeLog,v 1.2 2015/01/27 15:29:21 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/plzip/ChangeLog,v 1.3 2015/03/10 19:11:59 mgorny Exp $
+
+  10 Mar 2015; Michał Górny <mgorny@gentoo.org> -plzip-1.1.ebuild,
+  plzip-1.3.ebuild:
+  Fix dependencies (bug #542830), drop old.
 
 *plzip-1.3 (27 Jan 2015)
 
